<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mamadou.tutor.TutorDetails"
    tools:showIn="@layout/activity_tutor_details">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/john_doe"
            android:layout_width="90dp"
            android:layout_height="90dp" />
        <TextView
            android:textAlignment="center"
            android:textSize="@dimen/titleSize"
            android:text="@string/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:textSize="@dimen/titleSize"
            android:text="@string/competences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/universityTitle"
            android:textAlignment="center"
            android:textSize="@dimen/titleSize"
            android:text="@string/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:background="@color/white"
            android:padding="16dp"
            android:layout_below="@+id/universityTitle"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewExperience" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
