<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mamadou.tutor.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:id="@+id/login_form"
        android:layout_below="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textStyle="bold"
            android:id="@+id/title"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:gravity="center"
            android:text="@string/tutoratPlus"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:textColor="@color/black"
            android:layout_below="@+id/title"
            android:id="@+id/slogant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:gravity="center"
            android:text="@string/slogant"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />
        <Space
            android:id="@+id/space"
            android:layout_below="@+id/slogant"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/studentUsername"
                    android:textSize="@dimen/titleSize"
                    android:padding="10dp"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/studentPassword"
                    android:textSize="@dimen/titleSize"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/btn_login"
                android:padding="12dp"
                android:background="@drawable/rounded_button"
                android:text="Login"/>
            <TextView
                android:onClick="registration"
                android:textColor="@color/black"
                android:paddingTop="5dp"
                android:layout_below="@+id/logginLayout"
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/create_account"
                android:gravity="center"
                android:textSize="@dimen/titleSize"/>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:src="@android:drawable/ic_menu_help"
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"/>
    <Button
        android:background="@drawable/rounded_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About us"/>
</RelativeLayout>
